--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^3.6.0",
+    "dotenv-webpack": "^7.0.3",
+    "inject-body-webpack-plugin": "^1.3.0",
     "style-loader": "^1.3.0",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.12.7",
+    "axios": "^0.23.0",
     "html-webpack-plugin": "^5.4.0"
   }
 }
