--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.12.7",
     "axios": "^0.23.0",
-    "html-webpack-plugin": "^5.4.0",
-    "webpack-dev-server": "^4.3.1"
+    "html-webpack-plugin": "^5.4.0"
   }
 }
